# adacoder

./: CHANGELOG.md  README.md  codexresum  package-lock.json  package.json
backend/: bridge.py  main.py  pyproject.toml  requirements.txt
backend/outputs/: phase1_results.jsonl  phase1_results_recheck.jsonl
backend/src/: Adacoder.py  __init__.py  session_service.py  testfile.py
backend/src/datasets/: test.py
backend/src/executor/: AdacoderExe.py  __init__.py
backend/src/llm_clients/: __init__.py  llm_config.py  llm_provider.py  llm_router.py  test.py  test_local.py
backend/src/utils/: __init__.py  codeutil.py  fixutil.py
media/: webview.css  webview.js
src/: extension.ts
