[project]
name = "adacodertool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.85.0",
    "anyio==4.12.1",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "cryptography==46.0.5",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "fastapi==0.121.0",
    "google-auth==2.49.1",
    "google-genai==1.67.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.13.0",
    "openai==2.28.0",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "tenacity==9.1.4",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.38.0",
    "websockets==16.0",
]
